# nitpick

./: .gitignore  1  ARCHITECTURAL_REVIEW_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE.md  ARIA-001_COMPLETION_NOTES.md  AUDIT_v0.15.0.md  AUDIT_v0.15.3.md  AUDIT_v0.16.12.md  AUDIT_v0.17.5.md  AUDIT_v0.18.0.md  AUDIT_v0.19.5.md  AUDIT_v0.20.5.md  AUDIT_v0.21.0.md  AUDIT_v0.21.6.md  AUDIT_v0.22.0.md  AUDIT_v0.22.7.md  AUDIT_v0.23.7.md  AUDIT_v0.24.7.md  AUDIT_v0.25.7.md  CHANGELOG.md  CLAUDE_TASKS.md  CLAUDE_TASKS_SESSION2.md  CMakeLists.txt  CONTRIBUTING.md  CRITICAL_FIXES_v0.0.7.md  GETTING_STARTED.md  HANDOFF_2024-12-24.md  HANDOFF_ARIA_TO_ARIA_2024-12-24.md  HANDOFF_ARIA_TO_ARIA_2025-12-24.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INSTALL.md  KNOWN_ISSUES.md  OPERATOR_VERIFICATION_RESULTS.md  PHASE2_OPERATORS_SUMMARY.md  PHASE_2_3_MODULE_SYSTEM_COMPLETE.md  PHASE_4_2_FILE_IO_COMPLETE.md  PHASE_4_2_FILE_IO_PLAN.md  PROJECT_INFO.txt  README.md  (+258 more)
aria_ecosystem/aria_make/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  STATUS.md  project.txt
aria_ecosystem/aria_shell/: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  STATUS.md  WINDOWS_BOOTSTRAP_COMPLETE.md  test_command_exec.sh  test_direct_exec.sh  test_parser.sh
tests/: CMakeLists.txt  KITCHEN_SINK_STATUS.md  REMAINING_FAILURES.md  TEST_STATUS.md  address_of_test.aria  array_in_struct.aria  array_param.aria  array_slice  array_slice.aria  array_slice.npk  array_slice_simple  array_slice_simple.aria  array_slice_simple.npk  arrow_operator_full_test.aria  arrow_operator_test.aria  arrow_operator_verified.aria  arrow_operator_verified.npk  async_io_uring_test.cpp  async_io_uring_test.cpp.backup_fixast  atomic_debug.aria  atomic_minimal.aria  atomic_minimal.ll  balanced_ternary_basic.aria  balanced_ternary_basic.npk  batch02_gemini_audit_fixes.aria  batch02_gemini_audit_fixes.aria.bak  binary_test  binary_test.aria  binary_test.npk  blueprint_pointer_demo.aria  borrow_basic.aria  borrow_dollar_syntax_reject.npk  borrow_integration_test.aria  borrow_integration_test.npk  borrow_interproc.aria  borrow_interproc.npk  borrow_lifetime.aria  borrow_mut_param_plain_reject.aria  borrow_mut_param_writeback.aria  borrow_pinning.aria  (+761 more)
tests/adversarial/: BUGS_FOUND.md
tests/allocator/: check_arena_builtins.aria  check_pool_builtins.aria  check_pool_builtins.npk  check_slab_builtins.aria  check_slab_builtins.npk  quick_builtin_test.aria  quick_builtin_test.ll  test_arena_comprehensive  test_pool_comprehensive  test_slab_comprehensive  test_slab_debug  test_slab_debug2
tests/backend/: test_async_basic.cpp.backup_fixast  test_async_execution.cpp.backup_fixast  test_async_lowering.cpp.backup_fixast  test_codegen_expr.cpp.backup_fixast  test_codegen_stmt.cpp.backup_fixast  test_ir_generator.cpp  test_lambda_execution.cpp.backup_fixast  test_lambdas.cpp.backup_fixast  test_tbb_codegen.cpp.backup_fixast
tests/borrow/: README.md  run_tests.sh
tests/bug_regression/: .gitignore  bug001_002_lib.aria  bug001_002_shim.c  bug001_002_test.aria
tests/bugs/: bug008_emphatic_literal.aria  bug008_emphatic_literal.npk  bug009_error_type.aria  bug010_tbb_int_compare.aria  bug010_tbb_int_compare.npk  bug011_borrow_struct_field.aria  bug012_field_disjoint_borrows.npk  bug013_field_same_borrow_conflict.aria  bug014_field_borrow_assignment_conflict.npk  bug015_field_borrow_sibling_assignment.aria  bug016_wildx_free_pass.aria  bug017_wildx_leak_rejected.aria  bug018_wildx_defer_free_pass.npk  bug019_wildx_double_free_rejected.aria  bug020_pin_pass_by_value_rejected.aria  bug021_pin_pass_to_imm_param_rejected.npk  bug022_pin_pass_second_arg_rejected.npk  bug023_pin_pass_first_arg_rejected.aria  bug024_pin_exit_value_rejected.npk  bug025_pin_exit_paren_value_rejected.npk  bug026_nested_field_borrow_disjoint_pass.npk  bug027_nested_field_borrow_same_path_rejected.npk  bug028_nested_field_borrow_parent_child_rejected.aria  bug029_nested_field_borrow_sibling_assign_pass.npk  bug030_nested_field_borrow_assign_path_rejected.npk  bug031_nested_field_borrow_parent_assign_rejected.aria  bug032_field_alias_writeback_pass.npk  bug033_nested_field_alias_writeback_pass.aria  bug034_field_alias_read_pass.npk  bug035_immutable_field_alias_assignment_rejected.aria  bug036_array_element_alias_writeback_pass.npk  bug037_array_element_split_borrows_pass.aria  bug038_array_element_same_slot_borrow_rejected.aria  bug039_array_element_assignment_borrowed_slot_rejected.npk  bug040_array_element_dynamic_index_borrow_rejected.npk  bug040_array_element_two_dynamic_borrows_rejected.npk  bug041_array_element_dynamic_borrow_writeback_pass.npk  bug042_array_element_dynamic_immut_borrow_pass.npk  bug043_array_element_dynamic_literal_same_array_rejected.npk  bug044_array_element_dynamic_borrow_helper_call_pass.npk  (+444 more)
tests/cast/: 01_safe_widening.aria  01_safe_widening.npk  02_checked_narrowing.aria  03_unchecked_narrowing.aria  03_unchecked_narrowing.npk  04_int_to_float.aria  04_int_to_float.npk  05_float_to_int.aria  06_mixed_scenarios.aria  07_same_type_cast.aria  README.md  run_tests.sh
tests/closures/: run_closure_tests.sh  test_capture_byvalue.npk  test_capture_multi.npk  test_no_capture.npk
tests/collections/: test_collections.cpp.backup_fixast
tests/comptime/: run_comptime_tests.sh  test_array_compare.npk  test_const_functions.npk  test_struct_compare.npk  test_struct_store.npk
tests/coverage/: test_constructs_coverage.aria  test_constructs_coverage.npk  test_types_coverage.aria  test_types_coverage.npk
tests/determinism/: README.md  alloc_loop_simple.aria  alloc_simple.aria  alloc_simple.npk  compute_basic.aria  compute_fibonacci.aria  compute_loop.aria  compute_nested.aria  compute_nested.npk  determinism_tester.py  results.json  run_determinism_tests.py
tests/e2e/: test_complete_workflow.sh
tests/enum/: test_basic_enum  test_simple
tests/feature_validation/: array_indexing.aria  array_indexing.aria.bak  array_indexing.ll  array_int64.aria  array_int64.aria.bak  array_int64.ll  array_minimal.aria  array_minimal.npk  arrays_complete.aria  (+128 more)
(+4975 files in other folders)
